wip Added mocha-dark logo to README and test pages

--- a/mocha-dark-test.html
+++ b/mocha-dark-test.html
@@ -21,5 +21,6 @@
 			data-main="test/mocha-dark-test-require.js"
 			src="node_modules/requirejs/require.js"
 		></script>
+		<img width="100" src="images/mocha-dark-logo.svg" alt="Mocha Dark Logo"  style="display: table-cell; margin-left: auto; margin-right: auto;" />
 	</body>
 </html>
